# raspi-git

./: CurrentOfficeTemp.sh  README.md  RootCrontab.2015.03.17  Temp  Using_git  pinout_commands.txt  python-mailer02.py  raspi-gpio-off.py  raspi15-crontab  raspi15-sudo-crontab  raspi15_python3_webtemp.py  raspi15_webtemp_old.py  raspi20-webtemp.txt  uptime.txt  uptime.txt.tmp  webtemp_2_sensors.py  webtemp_5_sensors.py
1w/: w1-basement.py  w1-test.20221026.py
AdafruitAio1/: AdafruitAioSetup.txt  CopyAprxVoltage.sh  HouseTempAio.py  RobinCrontab.20160508  Uptime.sh  uptime.txt  uptime.txt.tmp
AdafruitAio14/: AdafruitAioSetup.txt  BasementTempAio.py  BasementTempAio.py.20191006  CopyAprxVoltage  GarageTempAio.py  HouseTempAio.py  MapleHouseTempAio.py  OutsideTempAio.py  RobinCrontab.20160521  UpdateAioTemps.sh  UpdateBasementTemp.py  house_stats_backup  mediadb_backup
Aio/: BasementTempAio.py  HouseTempAio.py  test01.py  test02.py
Alarm31/: alarm.py  alarm04.py  alarm06.py  alarm08.py  alarm10.py  alarm12.py  alarm16.py  alarm20.py  alarm21.py
AmateurRadio/: Yagi_calc.txt  email2text.txt  location.txt  pat.txt  winlinkSystem.txt
Aprx/: AprxLogBackup.sh  AprxTempUpdate.sh  CurrentOutsideTemp  UpdateTemps.sh  Uptime.sh  beacon01.txt  beacon01.txt.20151220  beacon02.txt  beacon03.txt  beacon04.txt
Aprx11/: Uptime.sh
Arduino/: BoardManagers.txt
Arduino23/: Arduino23Setup.txt  BattChargeMon.3.py  CopyAprxVoltage.sh  Uptime.sh  VoltageRead.py
ArduinoNano/: makefile  makefile.new.old  programming
Avrdude/: avrdude_gpio.conf
Barcode/: Barcode-Arran.py  Barcode01.py  Barcode02.py  Barcode03.py  Barcode04.py  Barcode04.py.save  Barcode04.py.save.1  Barcode05.py  Barcode06.py  Barcode07.py  ReverseTunnel.sh  Uptime.sh
BattMon/: AprxVoltage  RobinCrontab.20160506  RobinCrontab.20160508  UpdateVoltages.py  VoltageRead.py  battery_voltage.py
BattMon1/: AprxVoltUpdate.py.20151104  AprxVoltUpdate.py.old  AprxVoltage  ArduinoSerialString  BatteryShutdown.py  CurrentBatteryVoltage  ReadVoltage0  ReadVoltage1  ReadVoltage2  ReadVoltage3  ReadVoltage4  ReadVoltage4.sh  ReadVoltage5  RobinCrontab.20151115  RobinCrontab.20181018  Uptime.sh  VoltageRead.py  VoltageRead02.py  gertduino2.local  robin@raspi15.local  uptime.txt  uptime.txt.tmp
BattMon24/: OpenFile02.py  OpenFile04.py  battChrgON.sh  battmon24.txt  battmon24Pub01.py  battmon24PubAll.py  battmon24adc02.py  battmon24pub01.py  battmon24pub03.py  battmon24pub04.py  battmon24pub05.py  battmon24pub06.py
Battmon24/: Raspi15Batt.sh  battChrgOFF.sh  battmon24.txt  battmon24AdcPubChrg01.py  battmon24AdcPubChrg02.py  battmon24adc01.py  battmon24adc02.py  battmon24adc02.py.other  battmon24adc03.py  battmon24pub06.py
Blinka/: ads1015-01.py  ads1015-02.py  ads1015-03.py  ads1015-04.py
BlockHeat/: config.rlg  ifconfig
BlockHeat16/: BH-left24-on.py  BH-right23-off.py
BlockHeat21/: ReverseTunnel.sh  RobinCrontab20190923.txt
BlockHeat41/: BH-left24-off-mqtt.py  BH-left24-off.py  BH-left24-on-mqtt.py  BH-right23-off-mqtt.py  BH-right23-on-mqtt.py  BH-right23-on.py  BlockHeat41  ReverseTunnel.sh  blockTempMqtt.py  blockTempMqtt02.py  blocktemp01mqtt.py  coldStart.py  coldStart01.py  coldStart02.py  coldStart04.py  coldStart05.py  outputsOFF.sh
Breadboard36/: gpio26-off.py  gpio26-on.py  gpio26-pwm.py  gpio26-pwm100.py  gpio26-pwm50.py  wpa_supplicant.conf
Breadboard40/: Breadboard40.conf  ReverseTunnel.sh
C/: 20251206-01  20251206_01.c  Chap05a  Chap05a.c  Chap05b  Chap05b.c  Chap06a  Chap06a.c  Chap06b  Chap06b.c  Chap07a  Chap07a.c  Chap07b  Chap07b.c  HelloWorld  HelloWorld20220710.c  HelloWorld20250324  Loops01  Loops01.20220710.c  Loops02  Loops02.20220710.c  Loops03.20220710.c  Loops3  Pointers01  Pointers01.c  Pointers20221211a  Pointers20221211a.c  calculatorWinput  calculatorWinput.c  ledBlink01  ledBlink01.c  prog01.c  prog02  prog02.c  sumAndDiff  sumAndDiff.c  sumDiffandMult  sumDiffandMult.c
C-Programs/: 2019012701  2019012701.c  2019012702  2019012702.c  2019012703  2019012703.c  2019012704  2019012704.c  2019012705  2019012705.c  2019012706  2019012706.c  2019012707  2019012707.c  2019012708  2019012708.c  2019012709  2019012709.c  2019012710  2019012710.c  2019012711  2019012711.c  20201225-1  20201225-1.c  20201225-2  20201225-2.c  20201225-3  20201226-1  20201226-1.c  20201226-2  20201226-2.c  20201226-3  20201226-3.c  20201226-4  20201226-4.c  20201226-5  20201226-5.c  20201226-6  20201226-6.c  20201226-7  (+37 more)
CPRG-104/: Assign01.02.py  Assign01.03.py  Assign01.04.py  Assign01.06.py  Assign02.0.0.py  Assign02.0.00.py  Assign02.0.001.py  Assign02.0.01.py  Assign02.0.03.py  Assign02.0.05.py  M1_02.py  (+23 more)
Pico/C/WDT-test/: CMakeLists.txt  WDT01.c
Pico/C/ian01/: CMakeLists.txt  ian01.1.c  ian01.2.c
Pico/C/robin_c_programs/ds18b20_multi_a/: CMakeLists.txt  ds18b20.cpp  ds18b20.tgz
Pico/C/robin_c_programs/wifiTest/: CMakeLists.txt  wifiTest.c
Pico/C/serial01/: CMakeLists.txt  serial01.c  serial01.py
Pico/C/serial02/: CMakeLists.txt  serial02.c  serial02.py
Pico/C/serial03/: CMakeLists.txt  serial03.c  serial03.py
Pico/C/serial04/: CMakeLists.txt  serial03.py  serial04.c
Pico/C/serial05/: CMakeLists.txt  serial05.c
Pico/C/serial06/: CMakeLists.txt  serial05.py  serial06.1.c  serial06.2.c  serial06.c  serial06.c.old  serial06.py
(+2493 files in other folders)
